@@ -538,6 +538,16 @@ void gaim_xfer_error(GaimXferType type, const char *who, const char *msg);
  */
 void gaim_xfer_update_progress(GaimXfer *xfer);
 
+/**
+ * Displays a file transfer-related message in the conversation window
+ *
+ * This is a wrapper around gaim_conversation_write
+ *
+ * @param xfer The file transfer to which this message relates.
+ * @param message The message to display.
+ * @param gboolean Is this an error message?.
+ */
+void gaim_xfer_conversation_write(GaimXfer *xfer, char *message, gboolean is_error);
 /*@}*/
 
 /**************************************************************************/
