@@ -2,6 +2,8 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
 version 1.4.1:
 	* Ability to set IRC quit message (Lalo Martins)
+	* OSCAR file transfers now work for 2 users behind the same NAT
+	  (Jonathan Clark)
 
 version 1.4.0 (7/7/2005):
 	* Fix system log start times for some protocols
